--- a/css/webapp.css
+++ b/css/webapp.css
@@ -1,1 +1,40 @@
-webapp.css
+/*GLOBAL*/
+@font-face { font-family: 'proximanovaLight'; src: url('../font/proximanova/proximanova-light-webfont.eot'); src: url('../font/proximanova/proximanova-light-webfont.eot?#iefix') format('embedded-opentype'), url('../font/proximanova/proximanova-light-webfont.woff') format('woff'), url('../font/proximanova/proximanova-light-webfont.ttf') format('truetype'); font-weight: normal; font-style: normal; }
+@font-face { font-family: 'proximanovaSemiBold'; src: url('../font/proximanova/proximanova-semibold-webfont.eot'); src: url('../font/proximanova/proximanova-semibold-webfont.eot?#iefix') format('embedded-opentype'), url('../font/proximanova/proximanova-semibold-webfont.woff') format('woff'), url('../font/proximanova/proximanova-semibold-webfont.ttf') format('truetype'); font-weight: normal; font-style: normal; }
+body{background-color:#000;min-width:1000px;width:100%;height:100%;}
+p,h1,h2,h3,h4,h5,h6{color:#fff;font-family:'proximanovaLight';}
+p{font-size:15px;}
+/*Nav player*/
+#container{border: 5px solid #333;margin:10px;height:-moz-calc(100% - 40px);height:-webkit-calc(100% - 28px);-moz-box-shadow: inset 0 0 10px #000000;-webkit-box-shadow: inset 0 0 10px #000000;box-shadow: inset 0 0 10px #000000;z-index: 2;}
+#container>nav{width:-moz-calc(100% / 5);width:-webkit-calc(100% / 5);min-width: 250px;height:100%;height:100%;overflow:hidden;float: left;background-color: #151515;-moz-box-shadow: 0 0 10px #000000;-webkit-box-shadow: 0 0 10px #000000;box-shadow: 0 0 10px #000000;}
+#container>nav>input{margin:6px;position: fixed;min-width: 238px;width:-moz-calc(100% / 5 - 18px);width:-webkit-calc(100% / 5 - 18px);border:none;border-radius:8px;height:32px;padding:10px;-moz-box-shadow: inset 0 0 2px #000000;-webkit-box-shadow: inset 0 0 2px #000000;box-shadow: inset 0 0 2px #000000;background-color: #e7e7e7;border-bottom: 1px solid #484848;font-size:10px;}
+#container>nav>ul{width:100%;-webkit-padding-start: 0px;list-style:none;margin-top: 44px;}
+#container>nav>ul>li{width:100%;background-image:url(../assets/img/bt.jpg);height: 50px;border-top: 1px solid #303033;border-bottom: 1px solid #18181a;clear:both;}
+#container>nav>ul>li.click,#container>nav>ul>li:hover{background-image:url(../assets/img/btHover.jpg);}
+#container>nav>ul>li>img{float:left;margin:10px;}
+#container>nav>ul>li>p{float:left;margin-top: 15px;}
+#container>nav>ul>li>p:last-child{float: right;margin-right: 10px;}
+/*Global player*/
+#container>article{width:-moz-calc(100% / 5 * 4);width:-webkit-calc(100% / 5 * 4);margin-left:-moz-calc(100% / 5 );margin-left:-webkit-calc(100% / 5 );min-width:750px;}
+/*header player*/
+#container>article>header{width:100%;height: 245px;background-image:url(../assets/img/btHover.jpg);}
+#container>article>header>img{float: left;margin:40px;}
+#container>article>header>div{padding-top:50px;margin-left:20px;float: left;}
+#container>article>header>div>h1{font-size:45px;}
+#container>article>header>div>div{float:left;}
+#container>article>header>div>div:last-child{margin-left:30px;border-left:1px solid #2a2a2c;padding-left:30px;}
+#container>article>header>div>div>p{margin-bottom: 10px;}
+#container>article>header>div>div>p>span{font-family:'proximanovaSemiBold';}
+
+#container>article>header>div:last-child{
+	padding-top:30px;
+	margin-left:-webkit-calc(100% - 325px);;
+	width:300px;
+	height:190px;
+}
+#container>article>header>div:last-child>div:first-child{
+	width:100%;
+	background-color:#1e1e21;
+	padding-left:20px;
+	padding-top:50px;
+}
