--- a/css/webapp.css
+++ b/css/webapp.css
@@ -1,40 +1,64 @@
 /*GLOBAL*/
-@font-face { font-family: 'proximanovaLight'; src: url('../font/proximanova/proximanova-light-webfont.eot'); src: url('../font/proximanova/proximanova-light-webfont.eot?#iefix') format('embedded-opentype'), url('../font/proximanova/proximanova-light-webfont.woff') format('woff'), url('../font/proximanova/proximanova-light-webfont.ttf') format('truetype'); font-weight: normal; font-style: normal; }
-@font-face { font-family: 'proximanovaSemiBold'; src: url('../font/proximanova/proximanova-semibold-webfont.eot'); src: url('../font/proximanova/proximanova-semibold-webfont.eot?#iefix') format('embedded-opentype'), url('../font/proximanova/proximanova-semibold-webfont.woff') format('woff'), url('../font/proximanova/proximanova-semibold-webfont.ttf') format('truetype'); font-weight: normal; font-style: normal; }
-body{background-color:#000;min-width:1000px;width:100%;height:100%;}
-p,h1,h2,h3,h4,h5,h6{color:#fff;font-family:'proximanovaLight';}
+@font-face { font-family: 'proximanova'; src: url('../font/proximanova/proximanova-light-webfont.eot'); src: url('../font/proximanova/proximanova-light-webfont.eot?#iefix') format('embedded-opentype'), url('../font/proximanova/proximanova-light-webfont.woff') format('woff'), url('../font/proximanova/proximanova-light-webfont.ttf') format('truetype'); font-weight: normal; font-style: normal; }
+@font-face { font-family: 'proximanova'; src: url('../font/proximanova/proximanova-semibold-webfont.eot'); src: url('../font/proximanova/proximanova-semibold-webfont.eot?#iefix') format('embedded-opentype'), url('../font/proximanova/proximanova-semibold-webfont.woff') format('woff'), url('../font/proximanova/proximanova-semibold-webfont.ttf') format('truetype'); font-weight: bold; font-style: normal; }
+@font-face { font-family: 'proximanova'; src: url('../font/proximanova/ProximaNova-Bold.otf'); font-weight: bolder; font-style: normal; }
+body{background-color:#000;min-width:1200px;width:100%;height:100%;}
+p,h1,h2,h3,h4,h5,h6,a{color:#fff;font-family:'proximanova';text-decoration:none;}
 p{font-size:15px;}
+
 /*Nav player*/
 #container{border: 5px solid #333;margin:10px;height:-moz-calc(100% - 40px);height:-webkit-calc(100% - 28px);-moz-box-shadow: inset 0 0 10px #000000;-webkit-box-shadow: inset 0 0 10px #000000;box-shadow: inset 0 0 10px #000000;z-index: 2;}
 #container>nav{width:-moz-calc(100% / 5);width:-webkit-calc(100% / 5);min-width: 250px;height:100%;height:100%;overflow:hidden;float: left;background-color: #151515;-moz-box-shadow: 0 0 10px #000000;-webkit-box-shadow: 0 0 10px #000000;box-shadow: 0 0 10px #000000;}
-#container>nav>input{margin:6px;position: fixed;min-width: 238px;width:-moz-calc(100% / 5 - 18px);width:-webkit-calc(100% / 5 - 18px);border:none;border-radius:8px;height:32px;padding:10px;-moz-box-shadow: inset 0 0 2px #000000;-webkit-box-shadow: inset 0 0 2px #000000;box-shadow: inset 0 0 2px #000000;background-color: #e7e7e7;border-bottom: 1px solid #484848;font-size:10px;}
-#container>nav>ul{width:100%;-webkit-padding-start: 0px;list-style:none;margin-top: 44px;}
-#container>nav>ul>li{width:100%;background-image:url(../assets/img/bt.jpg);height: 50px;border-top: 1px solid #303033;border-bottom: 1px solid #18181a;clear:both;}
-#container>nav>ul>li.click,#container>nav>ul>li:hover{background-image:url(../assets/img/btHover.jpg);}
+#container>nav>div{position: fixed;width:-moz-calc(100% / 5);width:-webkit-calc(100% / 5);min-width: 250px;height:44px;background-color: #151515;}
+#container>nav>div>input{margin:6px;position: fixed;min-width: 238px;width:-moz-calc(100% / 5 - 18px);width:-webkit-calc(100% / 5 - 18px);border:none;border-radius:8px;height:32px;padding:10px;-moz-box-shadow: inset 0 0 2px #000000;-webkit-box-shadow: inset 0 0 2px #000000;box-shadow: inset 0 0 2px #000000;background-color: #e7e7e7;border-bottom: 1px solid #484848;font-size:10px;}
+#container>nav>ul{width:-webkit-calc(100% - 10px);float:left;-webkit-padding-start: 0px;list-style:none;margin-top: 44px;}
+#container>nav>ul>li{width:100%;background-image:url(../img/bt.jpg);height: 50px;border-top: 1px solid #303033;border-bottom: 1px solid #18181a;clear:both;}
+#container>nav>ul>li.click,#container>nav>ul>li:hover{background-image:url(../img/btHover.jpg);}
 #container>nav>ul>li>img{float:left;margin:10px;}
 #container>nav>ul>li>p{float:left;margin-top: 15px;}
 #container>nav>ul>li>p:last-child{float: right;margin-right: 10px;}
+#container>nav>div:last-child{min-width: 10px;position:relative;float:right;width: 10px;height:-webkit-calc(100% - 44px);margin-top:44px;background-color:transparent;}
+#container>nav>div:last-child>div{width: 10px;height: 100px;background-color: #1e1e21;}
 /*Global player*/
 #container>article{width:-moz-calc(100% / 5 * 4);width:-webkit-calc(100% / 5 * 4);margin-left:-moz-calc(100% / 5 );margin-left:-webkit-calc(100% / 5 );min-width:750px;}
 /*header player*/
-#container>article>header{width:100%;height: 245px;background-image:url(../assets/img/btHover.jpg);}
+#container>article>header{width:100%;height: 245px;background-image:url(../img/btHover.jpg);}
 #container>article>header>img{float: left;margin:40px;}
-#container>article>header>div{padding-top:50px;margin-left:20px;float: left;}
+#container>article>header>div{padding-top:50px;float: left;}
 #container>article>header>div>h1{font-size:45px;}
 #container>article>header>div>div{float:left;}
-#container>article>header>div>div:last-child{margin-left:30px;border-left:1px solid #2a2a2c;padding-left:30px;}
+#container>article>header>div>div:last-child{margin-left:20px;border-left:1px solid #2a2a2c;padding-left:20px;}
 #container>article>header>div>div>p{margin-bottom: 10px;}
-#container>article>header>div>div>p>span{font-family:'proximanovaSemiBold';}
+#container>article>header>div>div>p>span{font-family:'proximanova';font-weight:bold;}
+#container>article>header>div:last-child{padding-top:30px;margin-left:-webkit-calc(100% - 900px);;width:300px;height:190px;}
+#container>article>header>div:last-child>div:first-child{width:100%;background-color:#1e1e21;padding-left:20px;height:75%;border: 1px solid #000;-moz-box-shadow: inset 0 0 2px #000000;-webkit-box-shadow: inset 0 0 2px #000000;box-shadow: inset 0 0 2px #000000; }
+#container>article>header>div:last-child>div:first-child>h2{font-size:25px;margin-top: 15px;text-align: center;}
+#container>article>header>div:last-child>div:first-child>h3{font-size:95px;font-family: 'proximanova';font-weight: bolder;text-align: center;}
+#container>article>header>div:last-child>div:last-child{background-color: #1a1a1c;border-left:4px solid #159db2;margin-left: 0px;padding-left: 20px;padding-top: 12px;border-bottom:1px solid #232326;width: -webkit-calc(100% - 4px);height: 28px;}
+/*nav player*/
+#container>article>nav{border-top: 1px solid #545454;width: 100%;height:38px;background-image:url(../img/menuBt.jpg);}
+#container>article>nav>ul{width: 100%;color:#fff;}
+#container>article>nav>ul>li{padding: 0px 20px ;padding-top: 0px;margin-top: 10px;border-left: 1px solid #414141;border-right: 1px solid #030303;float: left;}
+#container>article>nav>ul>li:hover{/*background-image:url(../img/menuBtHover.jpg);*/background-color: #151517;border:none;border-bottom:4px solid #159db2;margin-top: 0px;padding-top:10px; padding-right:21px; padding-left:21px; height:24px;}
+/*resulme 2013*/
+#resume2013{width: 100%;height: -webkit-calc(100% - 285px);background-image:url(../img/btHover.jpg);}
+#resume2013>div:first-child{width: -webkit-calc(100% / 5 * 3 );height: 100%;float:left;}
+#resume2013>div:first-child>h3{font-size:25px;font-weight:bold;margin:30px;float: left;}
+#resume2013>div:first-child>p{font-size:15px;width:-webkit-calc(100% / 2 - 200px);float:left;margin:30px 0px;}
+#resume2013>div:first-child>p:first-of-type{margin-left:130px;}
 
-#container>article>header>div:last-child{
-	padding-top:30px;
-	margin-left:-webkit-calc(100% - 325px);;
-	width:300px;
-	height:190px;
-}
-#container>article>header>div:last-child>div:first-child{
-	width:100%;
-	background-color:#1e1e21;
-	padding-left:20px;
-	padding-top:50px;
-}
+#resume2013>div:first-child>div>div.statsBarConatiner:first-of-type{margin-top:90px}
+#resume2013>div:first-child>div>div.statsBarConatiner{margin-left:30px;width: 100%;height: 60px;}
+#resume2013>div:first-child>div>div.statsBarConatiner>p{font-size:20px;float:left;}
+#resume2013>div:first-child>div>div.statsBarConatiner>div.statsBar{margin-left:220px;}
+#resume2013>div:first-child>div>div.statsBarConatiner>div.statsBar>div{float:left;}
+#resume2013>div:first-child>div>div.statsBarConatiner>div.statsBar>div:nth-child(2){height: 30px;border-left: 1px solid #fff;}
+#resume2013>div:first-child>div>div.statsBarConatiner>div.statsBar>div>div{background-color: #159db2;width: 210px;height: 20px;}
+#resume2013>div:first-child>div>div.statsBarConatiner>div.statsBar>div:last-child>div{background-color: #c85235;width: 210px;height: 20px;}
+#resume2013>div:first-child>div>div.statsBarConatiner>div.statsBar>div>p{border-left: 1px solid #fff;height: 8px;margin-top: 0px;padding-left: 5px;}
+#resume2013>div:first-child>div>div.statsBarConatiner>div.statsBar>div:last-child>p{border-right: 1px solid #fff;border-left:none;padding-left:0;height: 8px;padding-right: 5px;margin-left: 185px;}
+
+
+
+
+#resume2013>div:last-child{width: -webkit-calc(100% / 5 * 2 );margin-left: -webkit-calc(100% / 5 * 3 );}
