--- a/css/home.css
+++ b/css/home.css
@@ -11,9 +11,9 @@ header{
 }
 
 #headerBox{
-	width: 330px;
-	margin:0 auto;
+	width: 960px;
 	font-family: 'proximanovaLight';
+	text-align: center;
 }
 
 .titleLeft{
@@ -25,15 +25,13 @@ header{
 }
 .imgballetennis{
 	position: absolute;
-	margin-left: 47px;
-	top: 90px;
+margin-left: -111px;	top: 90px;
 	width: 33px;
 }
 
 #containerFirstPart{	
 	width: 960px;
 	margin: 0 auto;	height: 710px;
-	position: relative
 
 }
 #contentFirstPart{
@@ -64,12 +62,28 @@ header{
 	background: white;
 	margin-top:13px;
 }
-#buttonWimbledon{float:left;width:160px; height: 22px;background: white;}
+#buttonWimbledon{
+	float:left;width:160px; height: 22px;background: white;
+
+}
+a:hover #buttonWimbledon {
+	border-bottom:3px solid #34a4bc;
+}
+a:hover #buttonStatistiques {
+	border-bottom:3px solid #34a4bc;
+}
+
+.wimb{font-family:'proximanovaSemiBold'; font-size: 11px; text-transform:uppercase;margin-top: 6px;
+margin-left: 14px;}
+.stat{font-family:'proximanovaSemiBold'; font-size: 11px; text-transform:uppercase;margin-top: 6px;
+margin-left: 14px;}
+
 #buttonStatistiques{float: left;
 width: 180px;
 height: 22px;
 background: white;
-margin-left: 20px;}
+margin-left: 20px;
+}
 
 #allButton{
 	float:left;
@@ -81,13 +95,12 @@ margin-left: 20px;}
 	height: 500px;
 	width: 100%;
 	background:white;
-	position: absolute;
 	z-index: -1;
 }
 #contentSecondPart{
 	width: 620px;
 	margin:0 auto;
-	margin-top: 80px;
+	padding-top: 38;
 }
 .titleSecondPart{
 	text-transform: uppercase;
@@ -124,7 +137,338 @@ margin-left: 20px;}
 	width: 620px;
 	margin:0 auto;
 }
+
+.countdownHolder{
+	width:490px;
+	margin:0 auto;
+	font-family: 'proximanovaLight';
+	font-size: 60px;
+	text-align:center;
+	letter-spacing:-3px;
+	margin-left:72px;
+}
+
+.position{
+	display: inline-block;
+	height:100px ;
+	position: relative;
+	width: 47px;
+	margin-left: -13px;
+}
+
+.digit{
+	position:absolute;
+	display:block;
+	width:47px;
+	background-color:#151517;
+	text-align:center;
+	color:#fff;
+	letter-spacing:-1px;
+	height: 80px;
+}
+
+.digit.static{
+/*	box-shadow:1px 1px  rgba(4, 4, 4, 0.35);
+	background-image: linear-gradient(bottom, #3A3A3A 50%, #444444 100%);
+	background-image: -o-linear-gradient(bottom, #3A3A3A 50%, #444444 100%);
+	background-image: -moz-linear-gradient(bottom, #3A3A3A 50%, #444444 100%);
+	background-image: -webkit-linear-gradient(bottom, #3A3A3A 50%, #444444 100%);
+	background-image: -ms-linear-gradient(bottom, #3A3A3A 50%, #444444 100%);*/
+	padding-top: 12px;
+	border-bottom:3px solid #34a4bc;
+
+}
+
+/**
+ * You can use these classes to hide parts
+ * of the countdown that you don't need.
+ */
+.countDays{ /* display:none !important;*/ }
+.countDiv0{ /* display:none !important;*/ }
+.countHours{margin-left:50px;}
+.countDiv1{}
+.countMinutes{margin-left:50px;}
+.countDiv2{}
+.countSeconds{margin-left:50px; display: none;}
+.count10{margin-left: 50px;}
+
+.countDiv{
+	display:inline-block;
+	width:16px;
+	height:100px;
+	position:relative;
+}
+
+.countDiv:before,
+.countDiv:after{
+	position:absolute;
+	width:5px;
+	height:100px;
+	background-color:#444;
+	border-radius:50%;
+	left:50%;
+	margin-left:-3px;
+	top:0.5em;
+	box-shadow:1px 1px 1px rgba(4, 4, 4, 0.5);
+	content:'';
+}
+
+.countDiv:after{
+	top:0.9em;
+}
+
+#writeCountDown{
+	width:502px;
+	margin:0 auto;
+	margin-top: -16px;
+}
+.days{
+	font-family: 'proximanovaLight';
+	font-size: 24px;
+	margin-left: 95px;
+}
+
+.hours{
+	font-family: 'proximanovaLight';
+	font-size: 24px;
+	margin-left: 71px;
+}
+
+.minutes{
+	font-family: 'proximanovaLight';
+	font-size: 24px;
+	margin-left: 58px;
+}
+.secondes{
+	font-family: 'proximanovaLight';
+	font-size: 24px;
+	margin-left: 36px;
+
+}
+
+/*Conteneur Troisième partie*/
+
+#containerThirdPart{
+	height: 736px;
+	width: 100%;
+	background:#151517;
+	z-index: -1;
+}
+#contentThirdPart{
+	width: 960px;
+	margin:0 auto;
+	padding-top: 38;
+}
+.titleThirdPart{
+	text-align: center;
+	font-family: 'proximanovaLight';
+	font-size: 36px;
+	color:white;
+}
+
+.textThirPart{
+	margin: auto;
+	text-align: center;
+	width:460px;
+	font-family: 'proximanovaLight';
+	font-size: 14px;
+	color:white;
+		margin-top: 25px;
+
+}
+
+#containerPlayerName{
+	width: 960px;
+}
+
+#contentPlayerNameMurray{
+	border-bottom:3px solid #34a4bc;
+	margin: auto;
+	width:77px;
+
+}
+
+#contentPlayerNameRoger{
+	border-bottom:3px solid #34a4bc;
+	margin: auto;
+	width:90px;
+
+}
+#contentPlayerNameDjoko{
+	border-bottom:3px solid #34a4bc;
+	margin: auto;
+	width:96px;
+
+}
+#contentPlayerNameNadal{
+	border-bottom:3px solid #34a4bc;
+	margin: auto;
+	width:77px;
+
+}
+#contentPlayerNameFerrer{
+	border-bottom:3px solid #34a4bc;
+	margin: auto;
+	width:76px;
+
+}
+#contentPlayerNameBerdych{
+	border-bottom:3px solid #34a4bc;
+	margin: auto;
+	width:96px;
+
+}
+#contentPlayerNamePotro{
+	border-bottom:3px solid #34a4bc;
+	margin: auto;
+	width:113px;
+
+}
+#contentPlayerNameTsonga{
+	border-bottom:3px solid #34a4bc;
+	margin: auto;
+	width:114px;
+
+}
+#contentPlayerNameGasquet{
+	border-bottom:3px solid #34a4bc;
+	margin: auto;
+	width:101px;
+
+}
+#contentPlayerNameWawrinka{
+	border-bottom:3px solid #34a4bc;
+	margin: auto;
+	width:115px;
+
+}
+
+#lueurThirdPart{
+	position: absolute;
+	margin-left: 218px;
+}
+
+.playerName{
+	font-family: 'proximanovaLight';
+	font-size: 14px;
+	color:white;
+	margin-bottom: 3px;	
+	text-align: center;
+}
+
+.hide{
+	display: none;
+}
+
+.look{
+	display: block;
+}
+#imgDjoko{
+	width:42%;
+	margin-left: 116px;
+}
+#containerFourPart{
+	height: 736px;
+	width: 100%;
+	background:#242427;
+}
+
+#contentFourPart{
+	width: 960px;
+	margin:0 auto;
+	padding-top: 37px;
+}
+
+.titleFourPart{
+	font-family: 'proximanovaLight';
+	font-size: 36px;
+	color:white;
+	text-align: center;
+}
+#buttonFourPart{
+	height: 30px;
+	background:#e7e7e7;
+	width:300px;
+	border:2px solid #19191c;
+	margin:auto;
+	border-radius: 3px;
+}
+#inputText{
+	margin-top:5px;
+	margin-left: 5px;
+	font-family: 'proximanovaRegular';
+	font-size: 15px;
+	background: #e7e7e7;
+	border:#1e1e21;
+	width: 220px;
+	color:#858585;
+
+}
+#submit{
+	font-family: 'proximanovaRegular';
+	font-size: 15px;
+	height: 15px;
+	margin-top:8px;
+	padding-left: 15px;
+	margin-right: 10px;
+	float: right;
+	background: #e7e7e7;
+	border:#1e1e21;
+	color:white;
+	border-left:1px solid #cbcbcb;
+}
+
+::-webkit-input-placeholder {
+   color: #858585;
+   	font-family: 'proximanovaRegular';
+	font-size: 15px;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+   color: #858585;
+   	font-family: 'proximanovaRegular';
+	font-size: 15px;
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+   color: #858585;
+   	font-family: 'proximanovaRegular';
+	font-size: 15px;
+}
+
+:-ms-input-placeholder {  
+   color: #858585;
+   	font-family: 'proximanovaRegular';
+	font-size: 15px;
+}
+
+#imgFourPart{
+	text-align:center;
+	margin-top: 35px;
+}
+.playerNameFourPart{
+	font-family: 'proximanovaSemiBold';
+	font-size: 15px;
+	text-align: center;
+	color:white;
+	margin-top: -5px;
+}
+
+#buttonAnalysePerformances{
+	margin: auto;
+	text-decoration: none;
+	width: 204px;
+	height: 23px;
+	background: white;
+	text-align: center;
+}
+.analysePerformances{
+	font-family: 'proximanovaSemiBold';
+	font-size: 12px;	
+	padding-top: 5px;
+	color:black;
+}
 @font-face { font-family: 'proximanovaLight'; src: url('../font/proximanova/proximanova-light-webfont.eot'); src: url('../font/proximanova/proximanova-light-webfont.eot?#iefix') format('embedded-opentype'), url('../font/proximanova/proximanova-light-webfont.woff') format('woff'), url('../font/proximanova/proximanova-light-webfont.ttf') format('truetype'); font-weight: normal; font-style: normal; }
 @font-face { font-family: 'proximanovaSemiBold'; src: url('../font/proximanova/proximanova-semibold-webfont.eot'); src: url('../font/proximanova/proximanova-semibold-webfont.eot?#iefix') format('embedded-opentype'), url('../font/proximanova/proximanova-semibold-webfont.woff') format('woff'), url('../font/proximanova/proximanova-semibold-webfont.ttf') format('truetype'); font-weight: normal; font-style: normal; }
+@font-face { font-family: 'proximanovaRegular'; src: url('../font/proximanova/proximanova-regular-webfont.eot'); src: url('../font/proximanova/proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../font/proximanova/proximanova-regular-webfont.woff') format('woff'), url('../font/proximanova/proximanova-regular-webfont.ttf') format('truetype'); font-weight: normal; font-style: normal; }
 
-95	100
