--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 body{
-		background: #151517;
+		background: #151515;
 
 }
 
@@ -210,13 +210,9 @@ margin-left: 20px;
 	background-image: -ms-linear-gradient(bottom, #3A3A3A 50%, #444444 100%);*/
 	padding-top: 12px;
 	border-bottom:3px solid #34a4bc;
-
+	z-index: 100;
 }
 
-/**
- * You can use these classes to hide parts
- * of the countdown that you don't need.
- */
 .countDays{ /* display:none !important;*/ }
 .countDiv0{ /* display:none !important;*/ }
 .countHours{margin-left:50px;}
@@ -504,28 +500,28 @@ margin-left: 20px;
 }
 
 #lueur1 {
-height: 93px;
-width: 94px;
-margin-top: -99px;
-margin-left: 73px;
-box-shadow: 2px 2px 20px black;
+height: 84px;
+width: 90px;
+margin-top: -93px;
+margin-left: 75px;
+box-shadow: 0px 2px 20px black;
 position: absolute;
 }
 
 #lueur2 {
-height: 93px;
-width: 94px;
-margin-top: -99px;
-margin-left: 204px;
-box-shadow: 2px 2px 20px black;
+height: 86px;
+width: 86px;
+margin-top: -95px;
+margin-left: 207px;
+box-shadow: 0px 2px 20px black;
 position: absolute;
 }
 
 #lueur3 {
-height: 93px;
-width: 94px;
-margin-top: -99px;
-margin-left: 335px;
+height: 87px;
+width: 82px;
+margin-top: -94px;
+margin-left: 336px;
 box-shadow: 2px 2px 20px black;
 position: absolute;
 }
