--- a/css/webapp.css
+++ b/css/webapp.css
@@ -2,7 +2,7 @@
 @font-face { font-family: 'proximanova'; src: url('../font/proximanova/proximanova-light-webfont.eot'); src: url('../font/proximanova/proximanova-light-webfont.eot?#iefix') format('embedded-opentype'), url('../font/proximanova/proximanova-light-webfont.woff') format('woff'), url('../font/proximanova/proximanova-light-webfont.ttf') format('truetype'); font-weight: normal; font-style: normal; }
 @font-face { font-family: 'proximanova'; src: url('../font/proximanova/proximanova-semibold-webfont.eot'); src: url('../font/proximanova/proximanova-semibold-webfont.eot?#iefix') format('embedded-opentype'), url('../font/proximanova/proximanova-semibold-webfont.woff') format('woff'), url('../font/proximanova/proximanova-semibold-webfont.ttf') format('truetype'); font-weight: bold; font-style: normal; }
 @font-face { font-family: 'proximanova'; src: url('../font/proximanova/ProximaNova-Bold.otf'); font-weight: bolder; font-style: normal; }
-body{background-color:#000;min-width:1200px;width:100%;height:100%;}
+body{background-color:#000;min-width:1280px;width:100%;height:100%;overflow:hidden;}
 p,h1,h2,h3,h4,h5,h6,a{color:#fff;font-family:'proximanova';text-decoration:none;}
 p{font-size:15px;}
 /*Nav player*/
@@ -16,8 +16,6 @@ p{font-size:15px;}
 #container>nav>ul>li>img{float:left;margin:10px;}
 #container>nav>ul>li>p{float:left;margin-top: 15px;}
 #container>nav>ul>li>p:last-child{float: right;margin-right: 10px;}
-#container>nav>div:last-child{min-width: 10px;position:relative;float:right;width: 10px;height:-webkit-calc(100%);background-color:transparent;}
-#container>nav>div:last-child>div{width: 10px;height: 100px;background-color: #1e1e21;}
 /*Global player*/
 #container>article{overflow:hidden;width:-moz-calc(100% / 5 * 4);width:-webkit-calc(100% / 5 * 4);margin-left:-moz-calc(100% / 5 );margin-left:-webkit-calc(100% / 5 );min-width:750px;}
 /*header player*/
@@ -35,27 +33,31 @@ p{font-size:15px;}
 #container>article>header>div:last-child>div:first-child>h3{font-size:95px;font-family: 'proximanova';font-weight: bolder;text-align: center;}
 #container>article>header>div:last-child>div:last-child{background-color: #1a1a1c;border-left:4px solid #159db2;margin-left: 0px;padding-left: 20px;padding-top: 12px;border-bottom:1px solid #232326;width: -webkit-calc(100% - 4px);height: 28px;}
 /*nav player*/
-#container>article>nav{border-top: 1px solid #545454;width: 100%;height:38px;background-image:url(../img/menuBt.jpg);box-shadow:0px 0px 4px 4px rgba(0, 0, 0, 1)}
+#container>article>nav{border-top: 1px solid #545454;width: 100%;height:38px;background-image:url(../img/menuBt.jpg);box-shadow:0px 0px 4px 2px rgba(0, 0, 0, 1)}
 #container>article>nav>ul{width: 100%;color:#fff;}
 #container>article>nav>ul>li{padding: 0px 20px ;padding-top: 0px;margin-top: 10px;border-left: 1px solid #414141;border-right: 1px solid #030303;float: left;}
 #container>article>nav>ul>li:hover{background-image:url(../img/menuBtHover.jpg);background-color: #151517;border:none;border-bottom:4px solid #159db2;margin-top: -1px;padding-top:11px; padding-right:21px; padding-left:21px; height:24px;}
 #container>article>nav>ul>li.active{background-image:url(../img/menuBtHover.jpg);background-color: #151517;border:none;border-bottom:4px solid #159db2;margin-top: -1px;padding-top:11px; padding-right:21px; padding-left:21px; height:24px;}
 /*resulme 2013*/
-#resume2013{width: 100%;height: -webkit-calc(100% - 285px);background-image:url(../img/btHover.jpg);}
-#resume2013>div:first-child{width: -webkit-calc(100% / 5 * 3 );height: 100%;float:left;}
-#resume2013>div:first-child>h3{font-size:25px;font-weight:bold;margin:30px;float: left;}
+#resume2013{width: 100%;height: -webkit-calc(100% - 285px);overflow:hidden;background-image:url(../img/btHover.jpg);float:left;}
+/*#resume2013>div{width: -webkit-calc(100%);}*/
+#resume2013>div:first-child{width: -webkit-calc(100% / 5 * 3 );float:left;border-right:1px solid #0a0a0a;}
+#resume2013>div>h3{font-size:25px;font-weight:bold;margin:30px;float: left;}
 #resume2013>div:first-child>p{font-size:15px;width:-webkit-calc(100% / 2 - 200px);float:left;margin:30px 0px;}
 #resume2013>div:first-child>p:first-of-type{margin-left:130px;}
+#resume2013>div:first-child>div>div:first-child{border-bottom:1px solid #0a0a0a;}
+#resume2013>div:first-child>div>div:last-child{border-top:1px solid #242424;}
 
-#resume2013>div:first-child>div>div.statsBarConatiner:first-of-type{margin-top:90px}
-#resume2013>div:first-child>div>div.statsBarConatiner{margin-left:30px;width: 100%;height: 60px;}
-#resume2013>div:first-child>div>div.statsBarConatiner>p{font-size:20px;float:left;}
-#resume2013>div:first-child>div>div.statsBarConatiner>div.statsBar{margin-left:220px;}
-#resume2013>div:first-child>div>div.statsBarConatiner>div.statsBar>div{float:left;}
-#resume2013>div:first-child>div>div.statsBarConatiner>div.statsBar>div:nth-child(2){height: 30px;border-left: 1px solid #fff;}
-#resume2013>div:first-child>div>div.statsBarConatiner>div.statsBar>div>div{background-color: #159db2;width: 110px;height: 20px;}
-#resume2013>div:first-child>div>div.statsBarConatiner>div.statsBar>div:last-child>div{background-color: #c85235;width: 210px;height: 20px;}
-#resume2013>div:first-child>div>div.statsBarConatiner>div.statsBar>div>p{border-left: 1px solid #fff;height: 8px;margin-top: 0px;padding-left: 5px;}
-#resume2013>div:first-child>div>div.statsBarConatiner>div.statsBar>div:last-child>p{border-right: 1px solid #fff;border-left:none;padding-left:0;height: 8px;padding-right: 5px;margin-left: 185px;}
+#resume2013>div:nth-child(2){width: -webkit-calc(100% / 5 * 2 - 12px);float:left;border-left:1px solid #242424;}
+#resume2013>div:nth-child(2)>div:nth-child(2){clear:both;}
+#resume2013>div:nth-child(2)>div:nth-child(3)>img{float:right;}
+#resume2013>div:nth-child(2)>div>img{width:282px;float:left;}
+#resume2013>div:nth-child(2)>div>div:first-of-type{margin-top:117px;margin-left:160px;background-image:url(../img/pointer.png);position:absolute;width:147px;height:31px;}
+#resume2013>div:nth-child(2)>div>div.left{margin-top: 160px;margin-left:160px;background-image:url(../img/pointer.png);position:absolute;width:147px;height:31px;-moz-transform: scaleX(-1);-o-transform: scaleX(-1);-webkit-transform: scaleX(-1);transform: scaleX(-1);filter: FlipH;-ms-filter: "FlipH";clear:both;}
 
-#resume2013>div:last-child{width: -webkit-calc(100% / 5 * 2 );margin-left: -webkit-calc(100% / 5 * 3 );}
+
+/********************STATS BAR********************************/
+div.statsBarConatiner:first-of-type{margin-top:90px}
+div.statsBarConatiner{margin-left:30px;width: 100%;height: 60px;}
+div.statsBarConatiner>p{font-size:20px;float:left;}
+div.statsBarConatiner>div.statsBar{margin-left:250px;width:-webkit-calc(100% - 280px);height: 40px;}
