--- a/css/home.css
+++ b/css/home.css
@@ -6,7 +6,7 @@ body{
 header{
 	width: 960px;
 	margin: 0 auto;
-	margin-top: 80px;	
+	margin-top: 70px;	
 
 }
 
@@ -32,7 +32,7 @@ header{
 .imgballetennis{
 	position: absolute;
 	margin-left: 42px;
-	top: 147px;
+	top: 138px;
 	width: 22px;
 -webkit-animation:animated_img 2s;
 
@@ -76,6 +76,7 @@ header{
 #contentFirstPart{
 	width: 435px;
 	margin:0 auto;
+	margin-top: 35px;
 }
 .sousTexte{
 	font-family: 'proximanovaSemiBold';
@@ -102,8 +103,10 @@ header{
 	margin-top:13px;
 }
 #buttonWimbledon{
-	float:left;width:160px; height: 22px;background: white;
-
+float: left;
+width: 166px;
+height: 22px;
+background: white;
 }
 a:hover #buttonWimbledon {
 	border-bottom:3px solid #34a4bc;
@@ -111,11 +114,18 @@ a:hover #buttonWimbledon {
 a:hover #buttonStatistiques {
 	border-bottom:3px solid #34a4bc;
 }
+a:hover #buttonAnalysePerformances {
+	border-bottom:3px solid #34a4bc;
+}
+.wimb{font-family: 'proximanovaSemiBold';
+font-size: 11px;
+text-transform: uppercase;
+margin-top: 5px;
+margin-left: 12px;
+color: black;}
 
-.wimb{font-family:'proximanovaSemiBold'; font-size: 11px; text-transform:uppercase;margin-top: 5px;
-margin-left: 25px;color:black;}
 .stat{font-family:'proximanovaSemiBold'; font-size: 11px; text-transform:uppercase;margin-top: 5px;
-margin-left: 46px;color:black;}
+margin-left: 43px;color:black;}
 
 #buttonStatistiques{float: left;
 width: 180px;
